prusti-tests/tests/parse/ui/no-attr-params.stderr
error: the `#[pure]` attribute does not take parameters
  --> $DIR/no-attr-params.rs:10:8
   |
10 | #[pure(dont write things here)]
   |        ^^^^^^^^^^^^^^^^^^^^^^

error: the `#[trusted]` attribute does not take parameters
  --> $DIR/no-attr-params.rs:15:11
   |
15 | #[trusted(dont write things here)]
   |           ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

